--- a/david-hochman.html
+++ b/david-hochman.html
@@ -329,159 +329,168 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Our Team</div>
-          <h1 class="hero-title">David Hochman</h1>
-          <div class="hero-subtitle">Director, Strategy & Operations Practice</div>
-          <p class="hero-body">
-            30+ Years of Strategic Planning & Economic Development | Innovation Ecosystem Expert | University &
-            Government Advisory
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Our Team</div>
+            <h1 class="hero-title">David Hochman</h1>
+            <div class="hero-subtitle">Director, Strategy & Operations Practice</div>
+            <p class="hero-body">
+              30+ Years of Strategic Planning & Economic Development | Innovation Ecosystem Expert | University &
+              Government Advisory
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/David Hochman.jpg" alt="David Hochman" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/David Hochman.jpg" alt="David Hochman" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              David Hochman is a Director at 3N Consulting LLC, bringing more than 30 years of experience in strategic
+              planning, innovation-led economic development, and organizational performance improvement for
+              universities,
+              government agencies, and nonprofit foundations. He is widely recognized for his expertise in
+              technology-based economic development, benchmarking, and strategic management, helping organizations
+              design
+              and implement policies that strengthen regional innovation ecosystems and research commercialization.
+            </p>
+            <p>
+              Mr. Hochman has advised state and regional economic-development agencies, public-private partnerships, and
+              higher-education institutions nationwide. He currently serves as an Associate and Special Advisor with
+              TEConomy Partners LLC, the nation's leading consulting practice for innovation-driven economic
+              development,
+              where he supports engagements for state governments, universities, and foundations.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            David Hochman is a Director at 3N Consulting LLC, bringing more than 30 years of experience in strategic
-            planning, innovation-led economic development, and organizational performance improvement for universities,
-            government agencies, and nonprofit foundations. He is widely recognized for his expertise in
-            technology-based economic development, benchmarking, and strategic management, helping organizations design
-            and implement policies that strengthen regional innovation ecosystems and research commercialization.
-          </p>
-          <p>
-            Mr. Hochman has advised state and regional economic-development agencies, public-private partnerships, and
-            higher-education institutions nationwide. He currently serves as an Associate and Special Advisor with
-            TEConomy Partners LLC, the nation's leading consulting practice for innovation-driven economic development,
-            where he supports engagements for state governments, universities, and foundations.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- PROFESSIONAL EXPERIENCE SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Professional Experience</h2>
+      <!-- PROFESSIONAL EXPERIENCE SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Professional Experience</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              <strong>TEConomy Partners LLC:</strong> Mr. Hochman currently serves as an Associate and Special Advisor
+              with TEConomy Partners LLC, the nation's leading consulting practice for innovation-driven economic
+              development.
+            </p>
+            <p>
+              <strong>Battelle Memorial Institute:</strong> Previously, he was a Senior Principal Consultant at Battelle
+              Memorial Institute's Technology Partnership Practice, where he led large-scale strategy and planning
+              initiatives for science and technology-driven economies.
+            </p>
+            <p>
+              <strong>New Jersey Commission on Science and Technology:</strong> Earlier in his career, Mr. Hochman
+              served
+              as Deputy Director and Interim Executive Director of the New Jersey Commission on Science and Technology,
+              managing $15 million in annual R&D grant programs and overseeing more than $125 million in research
+              facility
+              investments across the state.
+            </p>
+            <p>
+              <strong>Business Incubator Association of New York State:</strong> He also founded and served as the
+              Executive Director of the Business Incubator Association of New York State, expanding it to nearly 40
+              member
+              organizations operating more than 70 innovation facilities. His work has helped catalyze entrepreneurship,
+              strengthen university-industry partnerships, and accelerate commercialization capacity nationwide.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            <strong>TEConomy Partners LLC:</strong> Mr. Hochman currently serves as an Associate and Special Advisor
-            with TEConomy Partners LLC, the nation's leading consulting practice for innovation-driven economic
-            development.
-          </p>
-          <p>
-            <strong>Battelle Memorial Institute:</strong> Previously, he was a Senior Principal Consultant at Battelle
-            Memorial Institute's Technology Partnership Practice, where he led large-scale strategy and planning
-            initiatives for science and technology-driven economies.
-          </p>
-          <p>
-            <strong>New Jersey Commission on Science and Technology:</strong> Earlier in his career, Mr. Hochman served
-            as Deputy Director and Interim Executive Director of the New Jersey Commission on Science and Technology,
-            managing $15 million in annual R&D grant programs and overseeing more than $125 million in research facility
-            investments across the state.
-          </p>
-          <p>
-            <strong>Business Incubator Association of New York State:</strong> He also founded and served as the
-            Executive Director of the Business Incubator Association of New York State, expanding it to nearly 40 member
-            organizations operating more than 70 innovation facilities. His work has helped catalyze entrepreneurship,
-            strengthen university-industry partnerships, and accelerate commercialization capacity nationwide.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & CREDENTIALS SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Academic Background</h2>
+      <!-- EDUCATION & CREDENTIALS SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Academic Background</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Mr. Hochman holds a <strong>Master of Business Administration in Finance</strong> from New York
+              University's
+              Stern School of Business and a <strong>Bachelor of Arts in History and Philosophy of Science</strong> from
+              Princeton University.
+            </p>
+            <p>
+              A former adjunct professor at New York University's Wagner Graduate School of Public Administration, he
+              has
+              taught courses on strategic management and continues to be recognized for his lifelong commitment to
+              advancing regional innovation and public-sector excellence.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Mr. Hochman holds a <strong>Master of Business Administration in Finance</strong> from New York University's
-            Stern School of Business and a <strong>Bachelor of Arts in History and Philosophy of Science</strong> from
-            Princeton University.
-          </p>
-          <p>
-            A former adjunct professor at New York University's Wagner Graduate School of Public Administration, he has
-            taught courses on strategic management and continues to be recognized for his lifelong commitment to
-            advancing regional innovation and public-sector excellence.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
