--- a/dhatri-mulpuri.html
+++ b/dhatri-mulpuri.html
@@ -329,128 +329,132 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Dhatri Mulpuri</h1>
-          <div class="hero-subtitle">Data Analyst</div>
-          <p class="hero-body">
-            Master of Science in Data Intelligence | 5+ Years of Experience | Data Analytics & Engineering Specialist
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Dhatri Mulpuri</h1>
+            <div class="hero-subtitle">Data Analyst</div>
+            <p class="hero-body">
+              Master of Science in Data Intelligence | 5+ Years of Experience | Data Analytics & Engineering Specialist
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Dhatri Mulpuri.png" alt="Dhatri Mulpuri" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Dhatri Mulpuri.png" alt="Dhatri Mulpuri" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">About Dhatri</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">About Dhatri</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Dhatri Mulpuri is a Data Analyst at 3N Consulting, where she transforms complex datasets into meaningful
+              insights that drive smarter decisions and measurable performance improvement. With a background spanning
+              data engineering, analytics, and cloud technologies, she brings both technical depth and strategic
+              perspective to every engagement. Her work supports 3N's mission of helping public institutions and
+              businesses achieve clarity, efficiency, and results through evidence-based management.
+            </p>
+            <p>
+              Dhatri's experience includes designing analytical models, developing dashboards, and integrating
+              data-driven
+              insights into organizational planning and performance assessment. Her approach blends technical precision
+              with a strong understanding of business context—helping leaders connect metrics to mission and identify
+              opportunities for improvement and innovation.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Dhatri Mulpuri is a Data Analyst at 3N Consulting, where she transforms complex datasets into meaningful
-            insights that drive smarter decisions and measurable performance improvement. With a background spanning
-            data engineering, analytics, and cloud technologies, she brings both technical depth and strategic
-            perspective to every engagement. Her work supports 3N's mission of helping public institutions and
-            businesses achieve clarity, efficiency, and results through evidence-based management.
-          </p>
-          <p>
-            Dhatri's experience includes designing analytical models, developing dashboards, and integrating data-driven
-            insights into organizational planning and performance assessment. Her approach blends technical precision
-            with a strong understanding of business context—helping leaders connect metrics to mission and identify
-            opportunities for improvement and innovation.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EXPERTISE & BACKGROUND SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Expertise & Professional Background</h2>
+      <!-- EXPERTISE & BACKGROUND SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Expertise & Professional Background</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              She holds a <strong>Master of Science in Data Intelligence</strong> from the University of South Florida
+              and
+              has over five years of professional experience in data analytics and engineering, including prior work as
+              a
+              Specialist Programmer at a global IT firm.
+            </p>
+            <p>
+              <strong>Core Competencies:</strong> Data analytics and modeling, dashboard development, data engineering,
+              cloud technologies, business intelligence, performance assessment, organizational planning, and
+              evidence-based decision-making.
+            </p>
+            <p>
+              Dedicated to continuous learning and public value, Dhatri exemplifies 3N Consulting's commitment to
+              excellence, transparency, and impact through data.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            She holds a <strong>Master of Science in Data Intelligence</strong> from the University of South Florida and
-            has over five years of professional experience in data analytics and engineering, including prior work as a
-            Specialist Programmer at a global IT firm.
-          </p>
-          <p>
-            <strong>Core Competencies:</strong> Data analytics and modeling, dashboard development, data engineering,
-            cloud technologies, business intelligence, performance assessment, organizational planning, and
-            evidence-based decision-making.
-          </p>
-          <p>
-            Dedicated to continuous learning and public value, Dhatri exemplifies 3N Consulting's commitment to
-            excellence, transparency, and impact through data.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
