--- a/disclaimers.html
+++ b/disclaimers.html
@@ -274,121 +274,127 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Legal Information</div>
+            <h1 class="hero-title">Disclaimers</h1>
+            <p class="hero-body">
+              Last Updated: <span class="date-badge" id="updateDate"></span>
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- DISCLAIMERS CONTENT -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="disclaimer-content">
+            <h2>Legal Disclaimers</h2>
+
+            <h3>General Information</h3>
+            <p>The information provided on this website is for general informational purposes only. While 3N Consulting
+              ("3N") strives to ensure that all information presented is accurate and up to date, no representation or
+              warranty, express or implied, is made as to its completeness, accuracy, reliability, or suitability.
+              Visitors use all information at their own risk.</p>
+
+            <h3>No Professional Advice</h3>
+            <p>Content on this site—including case studies, examples, or publications—does not constitute professional,
+              legal, accounting, or consulting advice. Visitors should not act on information contained herein without
+              obtaining appropriate professional counsel specific to their situation.</p>
+
+            <h3>Engagement of Services</h3>
+            <p>Viewing this website or contacting 3N Consulting through it does not create a client relationship. A
+              formal
+              written agreement signed by both parties is required before 3N Consulting undertakes any professional
+              engagement.</p>
+
+            <h3>Third-Party Links</h3>
+            <p>This site may contain links to third-party websites. 3N Consulting does not control or endorse the
+              content,
+              accuracy, or policies of these external sites and is not responsible for any losses or damages arising
+              from
+              their use.</p>
+
+            <h3>Intellectual Property</h3>
+            <p>All content—including but not limited to text, graphics, logos, and documents—is the intellectual
+              property
+              of 3N Consulting unless otherwise stated. Reproduction or redistribution without prior written consent is
+              strictly prohibited.</p>
+
+            <h3>Limitation of Liability</h3>
+            <p>In no event shall 3N Consulting, its officers, employees, or affiliates be liable for any direct,
+              indirect,
+              incidental, consequential, or punitive damages arising out of access to or use of this website.</p>
+
+            <h3>Community Commitment</h3>
+            <p>3N Consulting is proud to serve public agencies and educational institutions in Maryland and beyond.
+              References to past performance or client results are illustrative of experience only and do not guarantee
+              future outcomes.</p>
+
+            <h3>Contact</h3>
+            <p>For questions regarding this disclaimer, please contact: <a
+                href="mailto:info@3nconsultinggroup.com">info@3nconsultinggroup.com</a></p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html" class="active">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Legal Information</div>
-          <h1 class="hero-title">Disclaimers</h1>
-          <p class="hero-body">
-            Last Updated: <span class="date-badge" id="updateDate"></span>
-          </p>
-        </div>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </section>
-
-    <!-- DISCLAIMERS CONTENT -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="disclaimer-content">
-          <h2>Legal Disclaimers</h2>
-
-          <h3>General Information</h3>
-          <p>The information provided on this website is for general informational purposes only. While 3N Consulting
-            ("3N") strives to ensure that all information presented is accurate and up to date, no representation or
-            warranty, express or implied, is made as to its completeness, accuracy, reliability, or suitability.
-            Visitors use all information at their own risk.</p>
-
-          <h3>No Professional Advice</h3>
-          <p>Content on this site—including case studies, examples, or publications—does not constitute professional,
-            legal, accounting, or consulting advice. Visitors should not act on information contained herein without
-            obtaining appropriate professional counsel specific to their situation.</p>
-
-          <h3>Engagement of Services</h3>
-          <p>Viewing this website or contacting 3N Consulting through it does not create a client relationship. A formal
-            written agreement signed by both parties is required before 3N Consulting undertakes any professional
-            engagement.</p>
-
-          <h3>Third-Party Links</h3>
-          <p>This site may contain links to third-party websites. 3N Consulting does not control or endorse the content,
-            accuracy, or policies of these external sites and is not responsible for any losses or damages arising from
-            their use.</p>
-
-          <h3>Intellectual Property</h3>
-          <p>All content—including but not limited to text, graphics, logos, and documents—is the intellectual property
-            of 3N Consulting unless otherwise stated. Reproduction or redistribution without prior written consent is
-            strictly prohibited.</p>
-
-          <h3>Limitation of Liability</h3>
-          <p>In no event shall 3N Consulting, its officers, employees, or affiliates be liable for any direct, indirect,
-            incidental, consequential, or punitive damages arising out of access to or use of this website.</p>
-
-          <h3>Community Commitment</h3>
-          <p>3N Consulting is proud to serve public agencies and educational institutions in Maryland and beyond.
-            References to past performance or client results are illustrative of experience only and do not guarantee
-            future outcomes.</p>
-
-          <h3>Contact</h3>
-          <p>For questions regarding this disclaimer, please contact: <a
-              href="mailto:info@3nconsultinggroup.com">info@3nconsultinggroup.com</a></p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
-      </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
@@ -398,6 +404,6 @@
     const options = { year: 'numeric', month: 'long', day: 'numeric' };
     document.getElementById('updateDate').textContent = today.toLocaleDateString('en-US', options);
   </script>
-  </body>
+</body>
 
 </html>
