--- a/marc-hochman.html
+++ b/marc-hochman.html
@@ -329,126 +329,130 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Marc Hochman</h1>
-          <div class="hero-subtitle">Advisory Board Chair</div>
-          <p class="hero-body">
-            Partner Emeritus at A.T. Kearney | 24+ Years of Leadership | Digital Analytics & Operations Expert
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Marc Hochman</h1>
+            <div class="hero-subtitle">Advisory Board Chair</div>
+            <p class="hero-body">
+              Partner Emeritus at A.T. Kearney | 24+ Years of Leadership | Digital Analytics & Operations Expert
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Marc Hochman.png" alt="Marc Hochman" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Marc Hochman.png" alt="Marc Hochman" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Marc Hochman was appointed Partner Emeritus with A.T. Kearney after spending more than 24 years with the
+              firm in a variety of leadership roles. In addition to client work across a diverse portfolio of industries
+              (Automotive, Consumer Products and Retail, Energy & Process Industries, Financial Institutions, and
+              Healthcare), Marc most recently served as Chief Operating Officer of Kearney Digital & Analytics. Prior to
+              taking on that role, he co-founded and co-led Kearney Analytics and was President of Cervello, a
+              wholly-owned subsidiary of Kearney that serves as a trusted advisor to blue-chip clients, earning a
+              stellar
+              reputation as a market leader in agile analytics, CRM, enterprise performance management, data management,
+              and business intelligence.
+            </p>
+            <p>
+              Before being named President of Cervello, Marc served as Chief Operating Officer for A.T. Kearney
+              Solutions,
+              was a member of the Americas Leadership Team, and led the firm's global Staffing & Operations function.
+              Additionally, Marc chaired the firm's US Investment Committees for over a decade. Prior joining A.T.
+              Kearney, Marc spent 12 years working for Air Products & Chemicals and American Cyanamid where he held
+              positions in cost engineering, applied research & development, energy management, finance, and
+              procurement.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Marc Hochman was appointed Partner Emeritus with A.T. Kearney after spending more than 24 years with the
-            firm in a variety of leadership roles. In addition to client work across a diverse portfolio of industries
-            (Automotive, Consumer Products and Retail, Energy & Process Industries, Financial Institutions, and
-            Healthcare), Marc most recently served as Chief Operating Officer of Kearney Digital & Analytics. Prior to
-            taking on that role, he co-founded and co-led Kearney Analytics and was President of Cervello, a
-            wholly-owned subsidiary of Kearney that serves as a trusted advisor to blue-chip clients, earning a stellar
-            reputation as a market leader in agile analytics, CRM, enterprise performance management, data management,
-            and business intelligence.
-          </p>
-          <p>
-            Before being named President of Cervello, Marc served as Chief Operating Officer for A.T. Kearney Solutions,
-            was a member of the Americas Leadership Team, and led the firm's global Staffing & Operations function.
-            Additionally, Marc chaired the firm's US Investment Committees for over a decade. Prior joining A.T.
-            Kearney, Marc spent 12 years working for Air Products & Chemicals and American Cyanamid where he held
-            positions in cost engineering, applied research & development, energy management, finance, and procurement.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & BACKGROUND SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Professional Leadership</h2>
+      <!-- EDUCATION & BACKGROUND SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Professional Leadership</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Marc holds a <strong>B.S. in Chemical Engineering and M.S. in Management (Strategy and Finance), both from
+                Purdue University</strong>. He served as President of the Krannert School Board of Directors from
+              2013-2019, was a member of the Dean's Advisory Council from 2020-2025, and is a member of Purdue's
+              President's Council. His extensive background in operations, analytics, and strategic leadership brings
+              invaluable perspective to 3N Consulting's governance and strategic direction.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Marc holds a <strong>B.S. in Chemical Engineering and M.S. in Management (Strategy and Finance), both from
-              Purdue University</strong>. He served as President of the Krannert School Board of Directors from
-            2013-2019, was a member of the Dean's Advisory Council from 2020-2025, and is a member of Purdue's
-            President's Council. His extensive background in operations, analytics, and strategic leadership brings
-            invaluable perspective to 3N Consulting's governance and strategic direction.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
