--- a/soorya-rajendran.html
+++ b/soorya-rajendran.html
@@ -329,125 +329,132 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Soorya Rajendran</h1>
-          <div class="hero-subtitle">Business Analyst</div>
-          <p class="hero-body">
-            Bachelor of Science in Computer Science | Data-Driven Research Specialist | Education & Public-Sector Focus
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Soorya Rajendran</h1>
+            <div class="hero-subtitle">Business Analyst</div>
+            <p class="hero-body">
+              Bachelor of Science in Computer Science | Data-Driven Research Specialist | Education & Public-Sector
+              Focus
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Soorya Rajendran.png" alt="Soorya Rajendran" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Soorya Rajendran.png" alt="Soorya Rajendran" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">About Soorya</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">About Soorya</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Soorya Rajendran is a Business Analyst at 3N Consulting who specializes in data-driven research,
+              stakeholder
+              engagement, and organizational assessment for education and public-sector initiatives. He brings an
+              analytical and structured approach to helping institutions improve performance, strengthen collaboration,
+              and make evidence-based decisions aligned with their strategic objectives.
+            </p>
+            <p>
+              At 3N, Soorya contributes to statewide projects that enhance operational efficiency, policy development,
+              and
+              institutional planning. His work involves synthesizing large volumes of qualitative and quantitative input
+              into clear insights that guide leadership priorities and improve accountability. He is recognized for his
+              ability to translate complex data into accessible, actionable strategies that inform decision-making
+              across
+              diverse stakeholders.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Soorya Rajendran is a Business Analyst at 3N Consulting who specializes in data-driven research, stakeholder
-            engagement, and organizational assessment for education and public-sector initiatives. He brings an
-            analytical and structured approach to helping institutions improve performance, strengthen collaboration,
-            and make evidence-based decisions aligned with their strategic objectives.
-          </p>
-          <p>
-            At 3N, Soorya contributes to statewide projects that enhance operational efficiency, policy development, and
-            institutional planning. His work involves synthesizing large volumes of qualitative and quantitative input
-            into clear insights that guide leadership priorities and improve accountability. He is recognized for his
-            ability to translate complex data into accessible, actionable strategies that inform decision-making across
-            diverse stakeholders.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BACKGROUND SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Background & Expertise</h2>
+      <!-- BACKGROUND SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Background & Expertise</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              A Maryland native, Soorya holds a Bachelor of Science in Computer Science from Mount St. Mary's
+              University.
+              His work reflects a strong commitment to public impact—applying analytical rigor, clarity, and stakeholder
+              alignment to help strengthen Maryland's education and governance systems.
+            </p>
+            <p>
+              <strong>Core Competencies:</strong> Data analysis and visualization, stakeholder engagement,
+              organizational
+              assessment, policy analysis, research synthesis, and strategic planning for education and public-sector
+              organizations.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            A Maryland native, Soorya holds a Bachelor of Science in Computer Science from Mount St. Mary's University.
-            His work reflects a strong commitment to public impact—applying analytical rigor, clarity, and stakeholder
-            alignment to help strengthen Maryland's education and governance systems.
-          </p>
-          <p>
-            <strong>Core Competencies:</strong> Data analysis and visualization, stakeholder engagement, organizational
-            assessment, policy analysis, research synthesis, and strategic planning for education and public-sector
-            organizations.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
