--- a/careers.html
+++ b/careers.html
@@ -345,121 +345,122 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
-        </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
-      </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html" class="active">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Join Our Team</div>
-          <h1 class="hero-title">We're Hiring</h1>
-          <p class="hero-body">
-            We're looking for energetic and entrepreneurial talent to join 3N Consulting and make a real impact on our
-            clients' success.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- CAREER OPPORTUNITIES -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Career Opportunities</h2>
-        </div>
-        <div class="content-block">
-          <p>
-            We are always on the lookout for energetic and entrepreneurial talent.
-          </p>
-          <a href="careers2.html" class="btn btn-primary" style="display: inline-flex; margin: 1.5rem 0;">Explore Jobs
-            →</a>
-          <div class="highlight-box">
-            <p><strong>If you have any other questions regarding careers at 3N, you may direct any inquiries
-                to:</strong></p>
-            <p><a href="mailto:careers@3nconsultinggroup.com" class="email-link">careers@3nconsultinggroup.com</a></p>
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
           </div>
         </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html" class="active">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-    </section>
+    </header>
 
-    <!-- WHY JOIN 3N -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Why Join 3N Consulting?</h2>
-          <p class="section-subtitle">
-            Be part of a team that values integrity, ownership, and results.
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Join Our Team</div>
+            <h1 class="hero-title">We're Hiring</h1>
+            <p class="hero-body">
+              We're looking for energetic and entrepreneurial talent to join 3N Consulting and make a real impact on our
+              clients' success.
+            </p>
+          </div>
         </div>
-        <div class="content-block">
-          <ul>
-            <li>Work with a team that maintains integrity and values client success</li>
-            <li>Ownership mindset—we own our results</li>
-            <li>Cost-conscious culture—we pass savings to clients</li>
-            <li>Opportunity to work on high-impact projects with leading organizations</li>
-            <li>Collaborative environment with experienced consultants</li>
-          </ul>
+      </section>
+
+      <!-- CAREER OPPORTUNITIES -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Career Opportunities</h2>
+          </div>
+          <div class="content-block">
+            <p>
+              We are always on the lookout for energetic and entrepreneurial talent.
+            </p>
+            <a href="careers2.html" class="btn btn-primary" style="display: inline-flex; margin: 1.5rem 0;">Explore Jobs
+              →</a>
+            <div class="highlight-box">
+              <p><strong>If you have any other questions regarding careers at 3N, you may direct any inquiries
+                  to:</strong></p>
+              <p><a href="mailto:careers@3nconsultinggroup.com" class="email-link">careers@3nconsultinggroup.com</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- WHY JOIN 3N -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Why Join 3N Consulting?</h2>
+            <p class="section-subtitle">
+              Be part of a team that values integrity, ownership, and results.
+            </p>
+          </div>
+          <div class="content-block">
+            <ul>
+              <li>Work with a team that maintains integrity and values client success</li>
+              <li>Ownership mindset—we own our results</li>
+              <li>Cost-conscious culture—we pass savings to clients</li>
+              <li>Opportunity to work on high-impact projects with leading organizations</li>
+              <li>Collaborative environment with experienced consultants</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
         </div>
       </div>
-    </section>
-
-
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
