--- a/david-mann.html
+++ b/david-mann.html
@@ -329,120 +329,124 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">David O. Mann</h1>
-          <div class="hero-subtitle">Advisory Board Member</div>
-          <p class="hero-body">
-            EOS Chairman | Venture Capital & Private Equity Leader | Entrepreneurial Strategy Expert | Former U.S. Navy
-            Officer
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">David O. Mann</h1>
+            <div class="hero-subtitle">Advisory Board Member</div>
+            <p class="hero-body">
+              EOS Chairman | Venture Capital & Private Equity Leader | Entrepreneurial Strategy Expert | Former U.S.
+              Navy
+              Officer
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/David Mann.png" alt="David O. Mann" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/David Mann.png" alt="David O. Mann" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              David Mann is managing partner of The Firefly Group, a holding company investing in lower middle market
+              businesses. In addition, David co-founded Spring Mill Venture Partners, a venture capital firm, in 2002.
+              He
+              previously served as an adjunct faculty member at Indiana University, Kelley School of Business
+              (Indianapolis). He worked with ServiceMaster Ventures and served as a founding member of the ServiceMaster
+              Home Service Center, a joint venture between Kleiner Perkins and ServiceMaster. David began his career as
+              an
+              officer in the U.S. Navy, serving as a White House Liaison Officer on the staff of the Secretary of the
+              Navy, holding leadership positions on board a nuclear guided-missile cruiser, and working in information
+              systems. David received his M.B.A. from Harvard Business School and B.S. from the U.S. Naval Academy.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            David Mann is managing partner of The Firefly Group, a holding company investing in lower middle market
-            businesses. In addition, David co-founded Spring Mill Venture Partners, a venture capital firm, in 2002. He
-            previously served as an adjunct faculty member at Indiana University, Kelley School of Business
-            (Indianapolis). He worked with ServiceMaster Ventures and served as a founding member of the ServiceMaster
-            Home Service Center, a joint venture between Kleiner Perkins and ServiceMaster. David began his career as an
-            officer in the U.S. Navy, serving as a White House Liaison Officer on the staff of the Secretary of the
-            Navy, holding leadership positions on board a nuclear guided-missile cruiser, and working in information
-            systems. David received his M.B.A. from Harvard Business School and B.S. from the U.S. Naval Academy.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & BACKGROUND SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Background</h2>
+      <!-- EDUCATION & BACKGROUND SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Background</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              David holds an <strong>MBA from Harvard Business School (with additional coursework at the Kennedy School)
+                and a B.S. from the U.S. Naval Academy</strong>, where he served as Company Commander and on the Brigade
+              Honor Committee. At 3N Consulting, David advises the leadership team on sales strategy, capital readiness,
+              and EOS-driven execution—equipping the team with practical tools, investor-grade narratives, and the
+              operating habits needed to scale responsibly and sustain growth.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            David holds an <strong>MBA from Harvard Business School (with additional coursework at the Kennedy School)
-              and a B.S. from the U.S. Naval Academy</strong>, where he served as Company Commander and on the Brigade
-            Honor Committee. At 3N Consulting, David advises the leadership team on sales strategy, capital readiness,
-            and EOS-driven execution—equipping the team with practical tools, investor-grade narratives, and the
-            operating habits needed to scale responsibly and sustain growth.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
