--- a/dyan-sellers.html
+++ b/dyan-sellers.html
@@ -329,156 +329,160 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Our Team</div>
-          <h1 class="hero-title">Dyan Sellers</h1>
-          <div class="hero-subtitle">Senior Manager, Human Capital & Organizational Transformation</div>
-          <p class="hero-body">
-            15+ Years of HR & Organizational Transformation Experience | Workforce Modernization & Process Improvement
-            Expert
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Our Team</div>
+            <h1 class="hero-title">Dyan Sellers</h1>
+            <div class="hero-subtitle">Senior Manager, Human Capital & Organizational Transformation</div>
+            <p class="hero-body">
+              15+ Years of HR & Organizational Transformation Experience | Workforce Modernization & Process Improvement
+              Expert
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Dyan Sellers.jpg" alt="Dyan Sellers" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Dyan Sellers.jpg" alt="Dyan Sellers" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Ms. Dyan Sellers is a seasoned human resources and organizational transformation executive with more than
+              15
+              years of experience leading workforce modernization, classification alignment, and process improvement
+              initiatives across K–12 education systems, local government, and nonprofit sectors. She combines strategic
+              HR leadership with operational execution—an approach that consistently delivers measurable improvements in
+              efficiency, equity, and workforce engagement.
+            </p>
+            <p>
+              At 3N Consulting, Ms. Sellers leads Human Resources and Finance workstreams for organizational assessments
+              and operational redesign engagements, including the Calvert County Public Schools Operating & Efficiency
+              Assessment. Her expertise in workforce planning, process automation, and human capital analytics ensures
+              clients receive practical, data-informed recommendations that strengthen both institutional effectiveness
+              and employee experience.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Ms. Dyan Sellers is a seasoned human resources and organizational transformation executive with more than 15
-            years of experience leading workforce modernization, classification alignment, and process improvement
-            initiatives across K–12 education systems, local government, and nonprofit sectors. She combines strategic
-            HR leadership with operational execution—an approach that consistently delivers measurable improvements in
-            efficiency, equity, and workforce engagement.
-          </p>
-          <p>
-            At 3N Consulting, Ms. Sellers leads Human Resources and Finance workstreams for organizational assessments
-            and operational redesign engagements, including the Calvert County Public Schools Operating & Efficiency
-            Assessment. Her expertise in workforce planning, process automation, and human capital analytics ensures
-            clients receive practical, data-informed recommendations that strengthen both institutional effectiveness
-            and employee experience.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- PROFESSIONAL EXPERIENCE SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Professional Experience</h2>
+      <!-- PROFESSIONAL EXPERIENCE SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Professional Experience</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              <strong>Baltimore City Council:</strong> Ms. Sellers currently serves as Director of Member Services for
+              the
+              Baltimore City Council, where she oversees all HR functions, including recruitment, compensation,
+              performance management, and organizational development. In this role, she modernized personnel structures,
+              digitized HR processes, and introduced transparent systems that improved compliance and accountability
+              across Council operations.
+            </p>
+            <p>
+              <strong>Baltimore City Public Schools:</strong> Previously, Ms. Sellers held senior leadership roles at
+              Baltimore City Public Schools, where she directed teacher recruitment and selection for an 8,000-employee
+              district—achieving the lowest teacher vacancy rate in more than a decade. She also spearheaded HRIS
+              modernization and equity-focused policy reform initiatives, aligning classification and compensation
+              frameworks to ensure consistency and fairness system-wide.
+            </p>
+            <p>
+              <strong>Edgility Consulting:</strong> As a former Principal Consultant at Edgility Consulting, Ms. Sellers
+              advised school districts, education agencies, and nonprofits nationwide on equitable hiring, workforce
+              restructuring, and HR modernization. Her consulting engagements regularly produced improvements in
+              recruitment efficiency, employee satisfaction, and diversity outcomes.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            <strong>Baltimore City Council:</strong> Ms. Sellers currently serves as Director of Member Services for the
-            Baltimore City Council, where she oversees all HR functions, including recruitment, compensation,
-            performance management, and organizational development. In this role, she modernized personnel structures,
-            digitized HR processes, and introduced transparent systems that improved compliance and accountability
-            across Council operations.
-          </p>
-          <p>
-            <strong>Baltimore City Public Schools:</strong> Previously, Ms. Sellers held senior leadership roles at
-            Baltimore City Public Schools, where she directed teacher recruitment and selection for an 8,000-employee
-            district—achieving the lowest teacher vacancy rate in more than a decade. She also spearheaded HRIS
-            modernization and equity-focused policy reform initiatives, aligning classification and compensation
-            frameworks to ensure consistency and fairness system-wide.
-          </p>
-          <p>
-            <strong>Edgility Consulting:</strong> As a former Principal Consultant at Edgility Consulting, Ms. Sellers
-            advised school districts, education agencies, and nonprofits nationwide on equitable hiring, workforce
-            restructuring, and HR modernization. Her consulting engagements regularly produced improvements in
-            recruitment efficiency, employee satisfaction, and diversity outcomes.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & CREDENTIALS SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Credentials</h2>
+      <!-- EDUCATION & CREDENTIALS SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Credentials</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Ms. Sellers holds a <strong>Master of Science in Human Resources Management</strong> from The Catholic
+              University of America and a <strong>Bachelor of Science in Zoology</strong> from the University of
+              Michigan.
+            </p>
+            <p>
+              Her work is guided by a belief that strong, equitable people systems are the foundation of every
+              high-performing organization.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Ms. Sellers holds a <strong>Master of Science in Human Resources Management</strong> from The Catholic
-            University of America and a <strong>Bachelor of Science in Zoology</strong> from the University of Michigan.
-          </p>
-          <p>
-            Her work is guided by a belief that strong, equitable people systems are the foundation of every
-            high-performing organization.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
