--- a/nick-gupta.html
+++ b/nick-gupta.html
@@ -329,156 +329,161 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Nick Gupta</h1>
-          <div class="hero-subtitle">Chief Executive Officer</div>
-          <p class="hero-body">
-            Founder of 3N Consulting LLC | 25+ Years of Management Consulting | Enterprise Transformation & Value
-            Creation Leader
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Nick Gupta</h1>
+            <div class="hero-subtitle">Chief Executive Officer</div>
+            <p class="hero-body">
+              Founder of 3N Consulting LLC | 25+ Years of Management Consulting | Enterprise Transformation & Value
+              Creation Leader
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Nick Gupta.png" alt="Nick Gupta" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Nick Gupta.png" alt="Nick Gupta" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Nick Gupta is the Founder of 3N Consulting LLC, where he leads enterprise efficiency, transformation, and
+              value-creation initiatives across the private equity, commercial, and public sectors. With more than 25
+              years of management consulting experience, Mr. Gupta has become a trusted advisor to CEOs, investors, and
+              boards—helping organizations achieve measurable operational and financial improvement under aggressive
+              growth or turnaround mandates.
+            </p>
+            <p>
+              Mr. Gupta's background includes extensive work with private equity portfolio companies, where he has
+              partnered with management teams and investors to stabilize operations, accelerate EBITDA growth, and
+              deliver
+              post-acquisition value creation. He has served on Boards of Directors, Advisory Boards, and Technical
+              Advisory Boards, helping firms navigate operational transformation, scale technology infrastructure, and
+              successfully raise Series A funding. His expertise in aligning financial objectives with sustainable
+              workforce and operational practices has made him a sought-after advisor for mid-market firms across
+              technology, consumer goods, and manufacturing.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Nick Gupta is the Founder of 3N Consulting LLC, where he leads enterprise efficiency, transformation, and
-            value-creation initiatives across the private equity, commercial, and public sectors. With more than 25
-            years of management consulting experience, Mr. Gupta has become a trusted advisor to CEOs, investors, and
-            boards—helping organizations achieve measurable operational and financial improvement under aggressive
-            growth or turnaround mandates.
-          </p>
-          <p>
-            Mr. Gupta's background includes extensive work with private equity portfolio companies, where he has
-            partnered with management teams and investors to stabilize operations, accelerate EBITDA growth, and deliver
-            post-acquisition value creation. He has served on Boards of Directors, Advisory Boards, and Technical
-            Advisory Boards, helping firms navigate operational transformation, scale technology infrastructure, and
-            successfully raise Series A funding. His expertise in aligning financial objectives with sustainable
-            workforce and operational practices has made him a sought-after advisor for mid-market firms across
-            technology, consumer goods, and manufacturing.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EXPERIENCE & EXPERTISE SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Career Highlights</h2>
+      <!-- EXPERIENCE & EXPERTISE SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Career Highlights</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              <strong>Wipro Consulting Services:</strong> Prior to founding 3N Consulting, Mr. Gupta served as Global
+              Head
+              of Organizational Redesign at Wipro Consulting Services, where he was one of the fastest-tracked
+              professionals from Manager to Partner in the firm's history. He pioneered Wipro's "Value Engineering"
+              delivery model—offering performance assessments at no cost and sharing in verified client savings.
+            </p>
+            <p>
+              <strong>Early Career:</strong> His earlier career at Deloitte and BearingPoint shaped his foundation in
+              strategy, process optimization, and financial modeling.
+            </p>
+            <p>
+              <strong>Major Transformations:</strong> Across his career, Mr. Gupta has led major transformation programs
+              for Wal-Mart, BNY Mellon, NBC Universal, Citigroup, and others. At Wal-Mart's Bentonville headquarters,
+              his
+              redesign of the company's Information Systems Division (ISD) directly preserved 350 U.S. jobs that were
+              slated for outsourcing—earning executive recognition for balancing efficiency with workforce protection.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            <strong>Wipro Consulting Services:</strong> Prior to founding 3N Consulting, Mr. Gupta served as Global Head
-            of Organizational Redesign at Wipro Consulting Services, where he was one of the fastest-tracked
-            professionals from Manager to Partner in the firm's history. He pioneered Wipro's "Value Engineering"
-            delivery model—offering performance assessments at no cost and sharing in verified client savings.
-          </p>
-          <p>
-            <strong>Early Career:</strong> His earlier career at Deloitte and BearingPoint shaped his foundation in
-            strategy, process optimization, and financial modeling.
-          </p>
-          <p>
-            <strong>Major Transformations:</strong> Across his career, Mr. Gupta has led major transformation programs
-            for Wal-Mart, BNY Mellon, NBC Universal, Citigroup, and others. At Wal-Mart's Bentonville headquarters, his
-            redesign of the company's Information Systems Division (ISD) directly preserved 350 U.S. jobs that were
-            slated for outsourcing—earning executive recognition for balancing efficiency with workforce protection.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & BACKGROUND SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Background</h2>
+      <!-- EDUCATION & BACKGROUND SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Background</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              A Maryland native, Mr. Gupta holds a <strong>B.S. in Management Science and Statistics</strong> from the
+              University of Maryland, College Park (Scholarship Recipient) and an <strong>MBA in Finance and
+                Strategy</strong> from Purdue University's Krannert School of Management (CIBER Assistantship
+              Recipient).
+            </p>
+            <p>
+              He continues to lead 3N Consulting with a mission rooted in excellence, partnership, and measurable value
+              creation—helping organizations realize their financial and operational potential through insight,
+              discipline, and execution.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            A Maryland native, Mr. Gupta holds a <strong>B.S. in Management Science and Statistics</strong> from the
-            University of Maryland, College Park (Scholarship Recipient) and an <strong>MBA in Finance and
-              Strategy</strong> from Purdue University's Krannert School of Management (CIBER Assistantship Recipient).
-          </p>
-          <p>
-            He continues to lead 3N Consulting with a mission rooted in excellence, partnership, and measurable value
-            creation—helping organizations realize their financial and operational potential through insight,
-            discipline, and execution.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
