--- a/nick-sickler.html
+++ b/nick-sickler.html
@@ -329,124 +329,128 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Nick Sickler</h1>
-          <div class="hero-subtitle">Advisory Board Member & Interim Chief Financial Officer</div>
-          <p class="hero-body">
-            CPA | 24+ Years of Accounting & Financial Leadership | Finance Operations & Governance Expert
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Nick Sickler</h1>
+            <div class="hero-subtitle">Advisory Board Member & Interim Chief Financial Officer</div>
+            <p class="hero-body">
+              CPA | 24+ Years of Accounting & Financial Leadership | Finance Operations & Governance Expert
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Nick Sickler.png" alt="Nick Sickler" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Nick Sickler.png" alt="Nick Sickler" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Nick Sickler serves as 3N Consulting's Interim Chief Financial Officer and Advisory Board Member, bringing
+              more than two decades of accounting and financial leadership experience. Nick currently serves as Chief
+              Financial Officer at Great Point Capital, where he oversees finance operations and leads the firm's
+              accounting department. A Certified Public Accountant, Nick's career spans over 24 years in public
+              accounting, working with privately held businesses and high-net-worth individuals to help them achieve
+              their
+              financial goals through sound audit, tax, and trust planning practices.
+            </p>
+            <p>
+              Before joining Great Point Capital, Nick spent nearly 25 years at John R. Waters & Company, a respected
+              Chicago-based public accounting firm, where he advanced to Attestation Manager and earned a reputation for
+              delivering high-quality client service. Deeply engaged in professional and civic life, he has held
+              leadership roles with the Purdue Club of Chicago, the Purdue Alumni Association, and the Risk Management
+              Association's Chicago Chapter, where he served as both President and Treasurer.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Nick Sickler serves as 3N Consulting's Interim Chief Financial Officer and Advisory Board Member, bringing
-            more than two decades of accounting and financial leadership experience. Nick currently serves as Chief
-            Financial Officer at Great Point Capital, where he oversees finance operations and leads the firm's
-            accounting department. A Certified Public Accountant, Nick's career spans over 24 years in public
-            accounting, working with privately held businesses and high-net-worth individuals to help them achieve their
-            financial goals through sound audit, tax, and trust planning practices.
-          </p>
-          <p>
-            Before joining Great Point Capital, Nick spent nearly 25 years at John R. Waters & Company, a respected
-            Chicago-based public accounting firm, where he advanced to Attestation Manager and earned a reputation for
-            delivering high-quality client service. Deeply engaged in professional and civic life, he has held
-            leadership roles with the Purdue Club of Chicago, the Purdue Alumni Association, and the Risk Management
-            Association's Chicago Chapter, where he served as both President and Treasurer.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & BACKGROUND SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Professional Credentials</h2>
+      <!-- EDUCATION & BACKGROUND SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Professional Credentials</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Nick holds a <strong>Bachelor of Science in Accounting from Purdue University</strong> and is an active
+              member of both the <strong>American Institute of CPAs (AICPA)</strong> and the <strong>Illinois CPA
+                Society</strong>. His hands-on leadership, financial acumen, and long-standing dedication to integrity
+              and
+              excellence strengthen 3N Consulting's fiscal strategy and governance as the firm continues its growth
+              across
+              Maryland and beyond.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Nick holds a <strong>Bachelor of Science in Accounting from Purdue University</strong> and is an active
-            member of both the <strong>American Institute of CPAs (AICPA)</strong> and the <strong>Illinois CPA
-              Society</strong>. His hands-on leadership, financial acumen, and long-standing dedication to integrity and
-            excellence strengthen 3N Consulting's fiscal strategy and governance as the firm continues its growth across
-            Maryland and beyond.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
