--- a/rachel-demuth.html
+++ b/rachel-demuth.html
@@ -329,154 +329,161 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Meet Our Team</div>
-          <h1 class="hero-title">Rachel DeMuth</h1>
-          <div class="hero-subtitle">Director, Organizational Design Practice</div>
-          <p class="hero-body">
-            Ph.D. in Industrial/Organizational Psychology | 20+ Years of Experience | Organization Design &
-            Transformation Expert
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Meet Our Team</div>
+            <h1 class="hero-title">Rachel DeMuth</h1>
+            <div class="hero-subtitle">Director, Organizational Design Practice</div>
+            <p class="hero-body">
+              Ph.D. in Industrial/Organizational Psychology | 20+ Years of Experience | Organization Design &
+              Transformation Expert
+            </p>
+          </div>
+          <div>
+            <img src="images/team members/Rachel DeMuth.png" alt="Rachel DeMuth" class="hero-image">
+          </div>
         </div>
-        <div>
-          <img src="images/team members/Rachel DeMuth.png" alt="Rachel DeMuth" class="hero-image">
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- BIOGRAPHY SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Biography</h2>
+      <!-- BIOGRAPHY SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Biography</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Dr. Rachel Frautschy Demuth serves as Director of the Organizational Design Practice at 3N Consulting LLC,
+              where she leads the implementation of organizational design and transformation recommendations with a
+              strong
+              focus on change management, leadership alignment, and workforce readiness. With over 20 years of
+              experience
+              in organizational psychology, talent strategy, and human capital transformation, Dr. Demuth helps clients
+              translate strategic intent into structure, culture, and behavior—ensuring sustainable performance through
+              periods of rapid growth, merger integration, and strategic realignment.
+            </p>
+            <p>
+              Before joining 3N Consulting, Dr. Demuth founded Right, Left, Forward Design, LLC, a consulting firm
+              specializing in organization design and transformation. In this capacity, she led design and change
+              management engagements for Fortune 500 and high-growth companies, including multi-region oil and gas
+              enterprises and national healthcare providers. Her portfolio includes work with The RBL Group, where she
+              directed multiple organization design workstreams for a global transformation of an $18B firm, and Trilogy
+              Health Services, where she streamlined HR field operations to improve service delivery and operational
+              efficiency.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Dr. Rachel Frautschy Demuth serves as Director of the Organizational Design Practice at 3N Consulting LLC,
-            where she leads the implementation of organizational design and transformation recommendations with a strong
-            focus on change management, leadership alignment, and workforce readiness. With over 20 years of experience
-            in organizational psychology, talent strategy, and human capital transformation, Dr. Demuth helps clients
-            translate strategic intent into structure, culture, and behavior—ensuring sustainable performance through
-            periods of rapid growth, merger integration, and strategic realignment.
-          </p>
-          <p>
-            Before joining 3N Consulting, Dr. Demuth founded Right, Left, Forward Design, LLC, a consulting firm
-            specializing in organization design and transformation. In this capacity, she led design and change
-            management engagements for Fortune 500 and high-growth companies, including multi-region oil and gas
-            enterprises and national healthcare providers. Her portfolio includes work with The RBL Group, where she
-            directed multiple organization design workstreams for a global transformation of an $18B firm, and Trilogy
-            Health Services, where she streamlined HR field operations to improve service delivery and operational
-            efficiency.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- PROFESSIONAL EXPERIENCE SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Professional Experience</h2>
+      <!-- PROFESSIONAL EXPERIENCE SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Professional Experience</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              <strong>Humana:</strong> Previously, Dr. Demuth spent more than a decade at Humana, advancing to Director
+              of
+              Organization Effectiveness and Talent Management. There, she led enterprise-wide organization design, M&A
+              integration, and culture alignment initiatives—including HR design and talent workstreams for Humana's
+              $5.7B
+              acquisition of Kindred at Home. She also spearheaded leadership development and succession planning
+              programs
+              that resulted in a 30% increase in diverse executive mobility within the first year.
+            </p>
+            <p>
+              <strong>Expertise:</strong> A recognized expert in organization effectiveness and human capital strategy,
+              Dr. Demuth is known for combining systems thinking, design thinking, and data-driven methods to deliver
+              organizational change that endures.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            <strong>Humana:</strong> Previously, Dr. Demuth spent more than a decade at Humana, advancing to Director of
-            Organization Effectiveness and Talent Management. There, she led enterprise-wide organization design, M&A
-            integration, and culture alignment initiatives—including HR design and talent workstreams for Humana's $5.7B
-            acquisition of Kindred at Home. She also spearheaded leadership development and succession planning programs
-            that resulted in a 30% increase in diverse executive mobility within the first year.
-          </p>
-          <p>
-            <strong>Expertise:</strong> A recognized expert in organization effectiveness and human capital strategy,
-            Dr. Demuth is known for combining systems thinking, design thinking, and data-driven methods to deliver
-            organizational change that endures.
-          </p>
-        </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- EDUCATION & CREDENTIALS SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Education & Credentials</h2>
+      <!-- EDUCATION & CREDENTIALS SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Education & Credentials</h2>
+          </div>
+          <div class="bio-section">
+            <p>
+              Dr. Demuth holds a <strong>Ph.D. in Industrial/Organizational Psychology</strong> from Northern Illinois
+              University, an <strong>M.A. in Industrial/Organizational Psychology</strong> from Northern Illinois
+              University, and an <strong>M.S. in Psychology</strong> from the University of Wisconsin–River Falls.
+            </p>
+            <p>
+              She is a member of the <strong>Society for Industrial and Organizational Psychology (SIOP)</strong>, a
+              leading professional organization for I/O psychologists and organizational consultants. Her academic
+              foundation and professional certifications position her as a thought leader in organizational design,
+              change
+              management, and human capital strategy.
+            </p>
+          </div>
         </div>
-        <div class="bio-section">
-          <p>
-            Dr. Demuth holds a <strong>Ph.D. in Industrial/Organizational Psychology</strong> from Northern Illinois
-            University, an <strong>M.A. in Industrial/Organizational Psychology</strong> from Northern Illinois
-            University, and an <strong>M.S. in Psychology</strong> from the University of Wisconsin–River Falls.
-          </p>
-          <p>
-            She is a member of the <strong>Society for Industrial and Organizational Psychology (SIOP)</strong>, a
-            leading professional organization for I/O psychologists and organizational consultants. Her academic
-            foundation and professional certifications position her as a thought leader in organizational design, change
-            management, and human capital strategy.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
+        </div>
       </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
