--- a/services.html
+++ b/services.html
@@ -368,148 +368,153 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html" class="active">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Comprehensive Solutions</div>
+            <h1 class="hero-title">Services</h1>
+            <p class="hero-body">
+              Consulting solutions tailored to your organization's unique needs and challenges.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- SERVICE LINES -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Our Core Services</h2>
+            <p class="section-subtitle">
+              We deliver comprehensive consulting solutions across multiple service lines to help your organization
+              thrive.
+            </p>
+          </div>
+
+          <div class="services-list">
+            <a href="organizational-redesign.html" style="text-decoration: none; color: inherit;">
+              <div class="service-item">
+                <h3>Organizational Redesign</h3>
+                <p>We help organizations align their structure, people, and processes to drive resilience and agility.
+                  Our
+                  approach ensures your organization is positioned for sustainable growth and can respond effectively to
+                  market changes.</p>
+              </div>
+            </a>
+
+            <a href="strategy-operations.html" style="text-decoration: none; color: inherit;">
+              <div class="service-item">
+                <h3>Strategy & Operations</h3>
+                <p>From corporate strategy development to interim management and lean improvements, we help you minimize
+                  waste and maximize efficiency. Our strategic approach is grounded in operational reality and
+                  measurable
+                  outcomes.</p>
+              </div>
+            </a>
+
+            <a href="data-analytics.html" style="text-decoration: none; color: inherit;">
+              <div class="service-item">
+                <h3>Data Analytics</h3>
+                <p>We develop frameworks and dashboards that uncover patterns, predict trends, and provide actionable
+                  insights. Our data-driven approach empowers you to make informed decisions that drive business
+                  results.
+                </p>
+              </div>
+            </a>
+
+            <a href="digital-transformation.html" style="text-decoration: none; color: inherit;">
+              <div class="service-item">
+                <h3>Digital Transformation</h3>
+                <p>From legacy modernization to AI implementation, we help you navigate digital transformation while
+                  reducing the ~70% failure risk through proper alignment. Our holistic approach ensures technology and
+                  business strategy work together seamlessly.</p>
+              </div>
+            </a>
+
+            <a href="human-capital.html" style="text-decoration: none; color: inherit;">
+              <div class="service-item">
+                <h3>Human Capital & Change Management</h3>
+                <p>We strengthen employee engagement, accelerate adoption of new initiatives, and foster leadership with
+                  purpose. Our change management expertise ensures your organization successfully navigates
+                  transformation
+                  while maintaining productivity and culture.</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="cta-section">
+            <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Ready to Transform Your Organization?</h3>
+            <p style="margin-bottom: 1.5rem; color: #4b5563;">Contact us to discuss how our service lines can help you
+              achieve your business goals.</p>
+            <a href="contact.html" class="btn btn-primary">Get in Touch →</a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html" class="active">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Comprehensive Solutions</div>
-          <h1 class="hero-title">Services</h1>
-          <p class="hero-body">
-            Consulting solutions tailored to your organization's unique needs and challenges.
-          </p>
-        </div>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </section>
-
-    <!-- SERVICE LINES -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Our Core Services</h2>
-          <p class="section-subtitle">
-            We deliver comprehensive consulting solutions across multiple service lines to help your organization
-            thrive.
-          </p>
-        </div>
-
-        <div class="services-list">
-          <a href="organizational-redesign.html" style="text-decoration: none; color: inherit;">
-            <div class="service-item">
-              <h3>Organizational Redesign</h3>
-              <p>We help organizations align their structure, people, and processes to drive resilience and agility. Our
-                approach ensures your organization is positioned for sustainable growth and can respond effectively to
-                market changes.</p>
-            </div>
-          </a>
-
-          <a href="strategy-operations.html" style="text-decoration: none; color: inherit;">
-            <div class="service-item">
-              <h3>Strategy & Operations</h3>
-              <p>From corporate strategy development to interim management and lean improvements, we help you minimize
-                waste and maximize efficiency. Our strategic approach is grounded in operational reality and measurable
-                outcomes.</p>
-            </div>
-          </a>
-
-          <a href="data-analytics.html" style="text-decoration: none; color: inherit;">
-            <div class="service-item">
-              <h3>Data Analytics</h3>
-              <p>We develop frameworks and dashboards that uncover patterns, predict trends, and provide actionable
-                insights. Our data-driven approach empowers you to make informed decisions that drive business results.
-              </p>
-            </div>
-          </a>
-
-          <a href="digital-transformation.html" style="text-decoration: none; color: inherit;">
-            <div class="service-item">
-              <h3>Digital Transformation</h3>
-              <p>From legacy modernization to AI implementation, we help you navigate digital transformation while
-                reducing the ~70% failure risk through proper alignment. Our holistic approach ensures technology and
-                business strategy work together seamlessly.</p>
-            </div>
-          </a>
-
-          <a href="human-capital.html" style="text-decoration: none; color: inherit;">
-            <div class="service-item">
-              <h3>Human Capital & Change Management</h3>
-              <p>We strengthen employee engagement, accelerate adoption of new initiatives, and foster leadership with
-                purpose. Our change management expertise ensures your organization successfully navigates transformation
-                while maintaining productivity and culture.</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="cta-section">
-          <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Ready to Transform Your Organization?</h3>
-          <p style="margin-bottom: 1.5rem; color: #4b5563;">Contact us to discuss how our service lines can help you
-            achieve your business goals.</p>
-          <a href="contact.html" class="btn btn-primary">Get in Touch →</a>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
-      </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
