--- a/thought-leadership.html
+++ b/thought-leadership.html
@@ -349,185 +349,185 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html" class="active">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Our Leadership & Expertise</div>
+            <h1 class="hero-title">Our Team</h1>
+            <p class="hero-body">
+              Meet the experienced consultants and industry leaders behind 3N Consulting.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- BOARD MEMBERS -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <h2 class="team-section-title">Board Members</h2>
+          <p class="team-section-subtitle">Leadership Shaping Our Mission and Direction</p>
+          <div class="team-grid">
+            <a href="nick-sickler.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Nick Sickler.png" alt="Nick Sickler" class="team-card-image">
+                <h3>Nick Sickler</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="marc-hochman.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Marc Hochman.png" alt="Marc Hochman" class="team-card-image">
+                <h3>Marc Hochman</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="david-mann.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/David Mann.png" alt="David Mann" class="team-card-image">
+                <h3>David Mann</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- THOUGHT LEADERS -->
+      <section class="section">
+        <div class="section-inner">
+          <h2 class="team-section-title">Our Thought Leaders</h2>
+          <p class="team-section-subtitle">Driving Insight, Innovation, and Industry Expertise</p>
+          <div class="team-grid">
+            <a href="rachel-demuth.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Rachel DeMuth.png" alt="Rachel DeMuth" class="team-card-image">
+                <h3>Rachel DeMuth</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="nick-gupta.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Nick Gupta.png" alt="Nick Gupta" class="team-card-image">
+                <h3>Nick Gupta</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="dyan-sellers.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Dyan Sellers.jpg" alt="Dyan Sellers" class="team-card-image">
+                <h3>Dyan Sellers</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="david-hochman.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/David Hochman.jpg" alt="David Hochman" class="team-card-image">
+                <h3>David Hochman</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- FEATURED TEAM MEMBERS -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <h2 class="team-section-title">Featured Team Members</h2>
+          <p class="team-section-subtitle">Team Members Driving Key Initiatives</p>
+          <div class="team-grid">
+            <a href="soorya-rajendran.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Soorya Rajendran.png" alt="Soorya Rajendran" class="team-card-image">
+                <h3>Soorya Rajendran</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="anirudh-peesay.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Anu Peesay.png" alt="Anirudh (Anu) Peesay" class="team-card-image">
+                <h3>Anirudh ("Anu") Peesay</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+
+            <a href="dhatri-mulpuri.html" style="text-decoration: none; color: inherit;">
+              <div class="team-card">
+                <img src="images/team members/Dhatri Mulpuri.png" alt="Dhatri Mulpuri" class="team-card-image">
+                <h3>Dhatri Mulpuri</h3>
+                <p>View Profile →</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
         </div>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html" class="active">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Our Leadership & Expertise</div>
-          <h1 class="hero-title">Our Team</h1>
-          <p class="hero-body">
-            Meet the experienced consultants and industry leaders behind 3N Consulting.
-          </p>
-        </div>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </section>
-
-    <!-- BOARD MEMBERS -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <h2 class="team-section-title">Board Members</h2>
-        <p class="team-section-subtitle">Leadership Shaping Our Mission and Direction</p>
-        <div class="team-grid">
-          <a href="nick-sickler.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Nick Sickler.png" alt="Nick Sickler" class="team-card-image">
-              <h3>Nick Sickler</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="marc-hochman.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Marc Hochman.png" alt="Marc Hochman" class="team-card-image">
-              <h3>Marc Hochman</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="david-mann.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/David Mann.png" alt="David Mann" class="team-card-image">
-              <h3>David Mann</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <!-- THOUGHT LEADERS -->
-    <section class="section">
-      <div class="section-inner">
-        <h2 class="team-section-title">Our Thought Leaders</h2>
-        <p class="team-section-subtitle">Driving Insight, Innovation, and Industry Expertise</p>
-        <div class="team-grid">
-          <a href="rachel-demuth.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Rachel DeMuth.png" alt="Rachel DeMuth" class="team-card-image">
-              <h3>Rachel DeMuth</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="nick-gupta.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Nick Gupta.png" alt="Nick Gupta" class="team-card-image">
-              <h3>Nick Gupta</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="dyan-sellers.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Dyan Sellers.jpg" alt="Dyan Sellers" class="team-card-image">
-              <h3>Dyan Sellers</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="david-hochman.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/David Hochman.jpg" alt="David Hochman" class="team-card-image">
-              <h3>David Hochman</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
-    <!-- FEATURED TEAM MEMBERS -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <h2 class="team-section-title">Featured Team Members</h2>
-        <p class="team-section-subtitle">Team Members Driving Key Initiatives</p>
-        <div class="team-grid">
-          <a href="soorya-rajendran.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Soorya Rajendran.png" alt="Soorya Rajendran" class="team-card-image">
-              <h3>Soorya Rajendran</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="anirudh-peesay.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Anu Peesay.png" alt="Anirudh (Anu) Peesay" class="team-card-image">
-              <h3>Anirudh ("Anu") Peesay</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-
-          <a href="dhatri-mulpuri.html" style="text-decoration: none; color: inherit;">
-            <div class="team-card">
-              <img src="images/team members/Dhatri Mulpuri.png" alt="Dhatri Mulpuri" class="team-card-image">
-              <h3>Dhatri Mulpuri</h3>
-              <p>View Profile →</p>
-            </div>
-          </a>
-        </div>
-      </div>
-    </section>
-
-
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
-      </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
