--- a/toolkit.html
+++ b/toolkit.html
@@ -386,142 +386,144 @@
   </style>
   <link rel="icon" type="image/png" href="images/logos/3N%20Consulting.png">
 </head>
+
 <body>
-<div class=" site-wrapper">
-  <header class="site-header">
-    <div class="nav-inner">
-      <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
-        <div>
-          <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
-            style="height: 90px; width: auto; max-width: 300px;">
+  <div class=" site-wrapper">
+    <header class="site-header">
+      <div class="nav-inner">
+        <div class="brand" style="display: flex; align-items: center; gap: 1rem;">
+          <div>
+            <img src="images/logos/new 3n logo.png" alt="3N Consulting Logo"
+              style="height: 90px; width: auto; max-width: 300px;">
+          </div>
+          <div style="display: flex; flex-direction: column; line-height: 1.1;">
+            <div
+              style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
+              3N Consulting</div>
+            <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
+          </div>
         </div>
-        <div style="display: flex; flex-direction: column; line-height: 1.1;">
-          <div
-            style="font-weight: 700; letter-spacing: 0.08em; text-transform: uppercase; font-size: 0.9rem; color: #e5e7eb;">
-            3N Consulting</div>
-          <div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.2rem;">Results. Delivered.</div>
-        </div>
+        <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="careers.html">Careers</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html" class="active">Our Toolkit</a>
+        </nav>
       </div>
-      <button class="nav-toggle" aria-label="Toggle navigation">Menu</button>
-      <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="services.html">Services</a>
-        <a href="careers.html">Careers</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html" class="active">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <main class="main">
-    <!-- HERO -->
-    <section class="hero">
-      <div class="hero-inner">
-        <div>
-          <div class="hero-eyebrow">Strategic Consulting Methods</div>
-          <h1 class="hero-title">Our Toolkit</h1>
-          <p class="hero-body">
-            Proven methodologies and frameworks designed to drive organizational transformation, clarity, and measurable
-            results. Explore the strategic approaches that guide our consulting engagements.
-          </p>
+    <main class="main">
+      <!-- HERO -->
+      <section class="hero">
+        <div class="hero-inner">
+          <div>
+            <div class="hero-eyebrow">Strategic Consulting Methods</div>
+            <h1 class="hero-title">Our Toolkit</h1>
+            <p class="hero-body">
+              Proven methodologies and frameworks designed to drive organizational transformation, clarity, and
+              measurable
+              results. Explore the strategic approaches that guide our consulting engagements.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- TOOLKIT SECTION -->
-    <section class="section section-alt">
-      <div class="section-inner">
-        <div class="section-header">
-          <h2 class="section-title">Our Methodologies</h2>
-          <p class="section-subtitle">
-            At 3N Consulting, we leverage evidence-based frameworks to help organizations assess current state, align
-            stakeholders, and accelerate results.
-          </p>
-        </div>
+      <!-- TOOLKIT SECTION -->
+      <section class="section section-alt">
+        <div class="section-inner">
+          <div class="section-header">
+            <h2 class="section-title">Our Methodologies</h2>
+            <p class="section-subtitle">
+              At 3N Consulting, we leverage evidence-based frameworks to help organizations assess current state, align
+              stakeholders, and accelerate results.
+            </p>
+          </div>
 
-        <div class="grid-2">
-          <!-- O-RAM Card -->
-          <a href="o-ram.html" style="text-decoration: none; color: inherit;">
-            <div class="toolkit-card">
-              <h3 class="toolkit-card-title">Organizational Readiness Assessment Methodology (O-RAM)</h3>
-              <p class="toolkit-card-description">
-                A comprehensive diagnostic framework that evaluates organizational capacity, alignment, and readiness
-                for strategic initiatives and transformation efforts.
-              </p>
-              <div class="toolkit-highlights">
-                <ul>
-                  <li>Current-state organizational assessment</li>
-                  <li>Stakeholder alignment mapping</li>
-                  <li>Capacity and capability analysis</li>
-                  <li>Risk and readiness scoring</li>
-                  <li>Actionable improvement roadmap</li>
-                </ul>
+          <div class="grid-2">
+            <!-- O-RAM Card -->
+            <a href="o-ram.html" style="text-decoration: none; color: inherit;">
+              <div class="toolkit-card">
+                <h3 class="toolkit-card-title">Organizational Readiness Assessment Methodology (O-RAM)</h3>
+                <p class="toolkit-card-description">
+                  A comprehensive diagnostic framework that evaluates organizational capacity, alignment, and readiness
+                  for strategic initiatives and transformation efforts.
+                </p>
+                <div class="toolkit-highlights">
+                  <ul>
+                    <li>Current-state organizational assessment</li>
+                    <li>Stakeholder alignment mapping</li>
+                    <li>Capacity and capability analysis</li>
+                    <li>Risk and readiness scoring</li>
+                    <li>Actionable improvement roadmap</li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
 
-          <!-- AAA Card -->
-          <a href="aaa.html" style="text-decoration: none; color: inherit;">
-            <div class="toolkit-card">
-              <h3 class="toolkit-card-title">Assess–Align–Accelerate (AAA)</h3>
-              <p class="toolkit-card-description">
-                A three-phase engagement model that systematically assesses challenges, aligns leadership and teams, and
-                accelerates implementation of solutions and outcomes.
-              </p>
-              <div class="toolkit-highlights">
-                <ul>
-                  <li><strong>Assess:</strong> Deep analysis of organizational challenges and opportunities</li>
-                  <li><strong>Align:</strong> Build consensus and synchronize priorities across leadership</li>
-                  <li><strong>Accelerate:</strong> Execute solutions with speed and accountability</li>
-                </ul>
+            <!-- AAA Card -->
+            <a href="aaa.html" style="text-decoration: none; color: inherit;">
+              <div class="toolkit-card">
+                <h3 class="toolkit-card-title">Assess–Align–Accelerate (AAA)</h3>
+                <p class="toolkit-card-description">
+                  A three-phase engagement model that systematically assesses challenges, aligns leadership and teams,
+                  and
+                  accelerates implementation of solutions and outcomes.
+                </p>
+                <div class="toolkit-highlights">
+                  <ul>
+                    <li><strong>Assess:</strong> Deep analysis of organizational challenges and opportunities</li>
+                    <li><strong>Align:</strong> Build consensus and synchronize priorities across leadership</li>
+                    <li><strong>Accelerate:</strong> Execute solutions with speed and accountability</li>
+                  </ul>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA SECTION -->
+      <section class="section">
+        <div class="section-inner">
+          <div class="cta-section">
+            <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Ready to Transform Your Organization?</h3>
+            <p style="margin-bottom: 1.5rem; color: #4b5563;">Let's discuss how our proven methodologies can drive
+              clarity, alignment, and results for your initiative.</p>
+            <a href="contact.html" class="btn btn-primary">Start Your Assessment →</a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="footer-inner">
+        <div style="flex: 1; min-width: 200px;">
+          <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
+          <p style="color: #6b7280;">Results. Delivered.</p>
+        </div>
+        <div class="footer-links">
+          <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all"
+            target="_blank">LinkedIn</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
+          <a href="thought-leadership.html">Meet Our Team</a>
+          <a href="toolkit.html">Our Toolkit</a>
         </div>
       </div>
-    </section>
-
-    <!-- CTA SECTION -->
-    <section class="section">
-      <div class="section-inner">
-        <div class="cta-section">
-          <h3 style="font-size: 1.3rem; margin-bottom: 1rem;">Ready to Transform Your Organization?</h3>
-          <p style="margin-bottom: 1.5rem; color: #4b5563;">Let's discuss how our proven methodologies can drive
-            clarity, alignment, and results for your initiative.</p>
-          <a href="contact.html" class="btn btn-primary">Start Your Assessment →</a>
-        </div>
+      <div
+        style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
+        <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
       </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div style="flex: 1; min-width: 200px;">
-        <div style="font-weight: 600; margin-bottom: 0.5rem;">3N Consulting</div>
-        <p style="color: #6b7280;">Results. Delivered.</p>
-      </div>
-      <div class="footer-links">
-        <a href="https://www.linkedin.com/company/3n-consulting-group/posts/?feedView=all" target="_blank">LinkedIn</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-        <a href="thought-leadership.html">Meet Our Team</a>
-        <a href="toolkit.html">Our Toolkit</a>
-        <a href="disclaimers.html">Disclaimers</a>
-      </div>
-    </div>
-    <div
-      style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e5e7eb; color: #9ca3af;">
-      <p>&copy; 2026 3N Consulting. All Rights Reserved.</p>
-    </div>
-  </footer>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  </body>
+</body>
 
 </html>
